--- a/03-spring-boot-hibernate-jpa-crud/01-cruddemo-student/src/main/resources/application.properties
+++ b/03-spring-boot-hibernate-jpa-crud/01-cruddemo-student/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.application.name=cruddemo
 spring.datasource.url=jdbc:mysql://localhost:3306/student_tracker
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
+
+# Turn off the Spring Boot Banner
+spring.main.banner-mode=off
+
+# Reduce logging Level-set logging level to warn
+logging.level.root=warn
