--- a/03-spring-boot-hibernate-jpa-crud/01-cruddemo-student/src/main/resources/application.properties
+++ b/03-spring-boot-hibernate-jpa-crud/01-cruddemo-student/src/main/resources/application.properties
@@ -1,10 +1,19 @@
 spring.application.name=cruddemo
-spring.datasource.url=jdbc:mysql://localhost:3306/student_tracker
-spring.datasource.username=springstudent
-spring.datasource.password=springstudent
+spring.datasource.url=jdbc:mysql://localhost:3307/student_tracker
+spring.datasource.username=root
+spring.datasource.password=
+#spring.datasource.username=springstudent
+#spring.datasource.password=springstudent
 
 # Turn off the Spring Boot Banner
 spring.main.banner-mode=off
 
 # Reduce logging Level-set logging level to warn
 logging.level.root=warn
+
+# Add logging config to display SQL statements
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
+
+# Configure JPA/Hibernate to auto create the tables
+spring.jpa.hibernate.ddl-auto=update
