--- a/04-spring-boot-rest-crud/04-spring-boot-rest-crud-employee-with-rest/src/main/resources/application.properties
+++ b/04-spring-boot-rest-crud/04-spring-boot-rest-crud-employee-with-rest/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.application.name=cruddemo
 spring.datasource.url=jdbc:mysql://localhost:3307/employee_directory
 spring.datasource.username=root
 spring.datasource.password=
+
+#
+#   Spring Data REST properties
+#
+spring.data.rest.base-path=/frist-rest-api
