Spring Data REST Confinguration, Pagination and Sorting

--- a/04-spring-boot-rest-crud/04-spring-boot-rest-crud-employee-with-rest/src/main/resources/application.properties
+++ b/04-spring-boot-rest-crud/04-spring-boot-rest-crud-employee-with-rest/src/main/resources/application.properties
@@ -10,4 +10,5 @@ spring.datasource.password=
 #
 #   Spring Data REST properties
 #
-spring.data.rest.base-path=/frist-rest-api
+spring.data.rest.base-path=/first-rest-api
+spring.data.rest.default-page-size=20
