--- a/04-spring-boot-rest-crud/51-openapi-swager-starter-projects-spring-rest/src/main/resources/application.properties
+++ b/04-spring-boot-rest-crud/51-openapi-swager-starter-projects-spring-rest/src/main/resources/application.properties
@@ -7,8 +7,15 @@ spring.datasource.url=jdbc:mysql://localhost:3307/employee_directory
 spring.datasource.username=root
 spring.datasource.password=
 
+
 # configure custom path
-springdoc.swagger-ui=/my-ui.html
+springdoc.swagger-ui.path=/my-ui.html
 
 # Configure custom path for api docs
-springdoc.api-docs=/my-api-docs
+springdoc.api-docs.path=/my-api-docs
+
+#
+#   Spring Data REST properties
+#
+spring.data.rest.base-path=/first-rest-api
+spring.data.rest.default-page-size=20
