--- a/05-spring-rest-security/00-spring-boot-rest-security-employee-starter-code/src/main/resources/application.properties
+++ b/05-spring-rest-security/00-spring-boot-rest-security-employee-starter-code/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.application.name=cruddemo
 spring.datasource.url=jdbc:mysql://localhost:3307/employee_directory
 spring.datasource.username=root
 spring.datasource.password=
+
+spring.security.user.name=jery
+spring.security.user.password=password
