--- a/05-spring-rest-security/00-spring-boot-rest-security-employee-starter-code/pom.xml
+++ b/05-spring-rest-security/00-spring-boot-rest-security-employee-starter-code/pom.xml
@@ -49,6 +49,8 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+
+        <!-- MYSQL -->
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
