Correcting the query error

--- a/05-spring-rest-security/00-spring-boot-rest-security-employee-starter-code/src/main/resources/application.properties
+++ b/05-spring-rest-security/00-spring-boot-rest-security-employee-starter-code/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.datasource.password=
 
 spring.security.user.name=jery
 spring.security.user.password=password
+
+logging.level.org.springframework.security=DEBUG
+
+
+
