--- a/06-sping-boot-mvc/01-thymeleafdemo-helloworld/src/main/resources/application.properties
+++ b/06-sping-boot-mvc/01-thymeleafdemo-helloworld/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=thymeleafdemo
 
 countries=Brazil,France,Germany,India,Mexico,Spain,United States
+languages=HTML,Go,Java,JavaScript,Php,Python,Rust,TypeScript
