--- a/08-spring-boot-spring-mvc-security/01-spring-boot-spring-boot-mvc-security/src/main/resources/application.properties
+++ b/08-spring-boot-spring-mvc-security/01-spring-boot-spring-boot-mvc-security/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=demosecurity
+
+#
+#  JDBC Properties
+#
+spring.datasource.url=jdbc:mysql://lacolhost:3307/employee_directory
+spring.datasource.username=root
+spring.datasource.password=
+
+#
+# Log JDBC SQL statements
+#
+# Only use this for dev/testing
+# DO NOT user for PRODUCTION since it will log user name
+logging.level.org.springframework.jdbc.core=TRACE
