--- a/08-spring-boot-spring-mvc-security/01-spring-boot-spring-boot-mvc-security/src/main/resources/application.properties
+++ b/08-spring-boot-spring-mvc-security/01-spring-boot-spring-boot-mvc-security/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=demosecurity
 #
 #  JDBC Properties
 #
-spring.datasource.url=jdbc:mysql://lacolhost:3307/employee_directory
+spring.datasource.url=jdbc:mysql://localhost:3307/employee_directory
 spring.datasource.username=root
 spring.datasource.password=
 
