--- a/08-spring-boot-spring-mvc-security/bonus-code-spring-boot-spring-mvc-security-jpa-hibernate-bcrypt/pom.xml
+++ b/08-spring-boot-spring-mvc-security/bonus-code-spring-boot-spring-mvc-security-jpa-hibernate-bcrypt/pom.xml
@@ -31,10 +31,10 @@
 	</properties>
 	<dependencies>
 
+        <!-- JPA -->
 		<dependency>
-			<groupId>jakarta.persistence</groupId>
-			<artifactId>jakarta.persistence-api</artifactId>
-			<version>3.1.0</version> <!-- Use an appropriate version -->
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
 		<dependency>
@@ -57,6 +57,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
