--- a/09-spring-boot-jpa-advanced-mappings/01-jpa-one-to-one-uni/src/main/resources/application.properties
+++ b/09-spring-boot-jpa-advanced-mappings/01-jpa-one-to-one-uni/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=cruddemo
+
+spring.datasource.url=jdbc:mysql://localhost:3307/hb-01-one-to-one-uni
+spring.datasource.username=root
+spring.datasource.password=
