--- a/09-spring-boot-jpa-advanced-mappings/01-jpa-one-to-one-uni/src/main/resources/application.properties
+++ b/09-spring-boot-jpa-advanced-mappings/01-jpa-one-to-one-uni/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.application.name=cruddemo
 spring.datasource.url=jdbc:mysql://localhost:3307/hb-01-one-to-one-uni
 spring.datasource.username=root
 spring.datasource.password=
+
+# Turn off the spring Boot banner
+spring.main.banner-mode=off
+
+# Reduce logging level. set logging level to warn
+logging.level.root=warn
