--- a/09-spring-boot-jpa-advanced-mappings/01-jpa-one-to-one-uni/src/main/resources/application.properties
+++ b/09-spring-boot-jpa-advanced-mappings/01-jpa-one-to-one-uni/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.main.banner-mode=off
 
 # Reduce logging level. set logging level to warn
 logging.level.root=warn
+
+# Show JPA/Hibernate logging message
+logging.level.org.hibernate.SQL=trace
+logging.level..org.hibernate.orm.jdbc.bind=trace
